<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@mipmap/background"
    tools:context=".RegisterActivity">

    <TextView
        android:id="@+id/txt_registrasi"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/halaman_registrasi"
        android:textStyle="bold"
        android:textSize="25sp"
        android:layout_marginTop="50sp"
        android:layout_centerHorizontal="true"
        android:textColor="@color/white"/>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:padding="20sp"
        android:layout_below="@+id/txt_registrasi"
        android:layout_margin="15sp"
        android:background="@drawable/card_shape">

        <EditText
            android:id="@+id/edit_email"
            android:layout_width="match_parent"
            android:layout_height="50sp"
            android:inputType="textEmailAddress"
            android:hint="@string/masukan_email"
            android:paddingStart="20sp"
            android:textColor="@color/dark"
            android:background="@drawable/button_shape"
            tools:ignore="RtlSymmetry" />

        <EditText
            android:id="@+id/edit_password"
            android:layout_marginTop="10sp"
            android:layout_width="match_parent"
            android:layout_height="50sp"
            android:inputType="textPassword"
            android:hint="@string/masukan_password"
            android:paddingStart="20sp"
            android:textColor="@color/dark"
            android:background="@drawable/button_shape"
            tools:ignore="RtlSymmetry" />

        <EditText
            android:id="@+id/edit_name"
            android:layout_marginTop="10sp"
            android:layout_width="match_parent"
            android:layout_height="50sp"
            android:inputType="text"
            android:hint="@string/masukan_nama"
            android:paddingStart="20sp"
            android:textColor="@color/dark"
            android:background="@drawable/button_shape"
            tools:ignore="RtlSymmetry" />

        <TextView
            android:layout_width="match_parent"
            android:layout_height="25sp"
            android:text="@string/pilih_jenis_kelamin"
            android:layout_marginTop="10sp"
            android:gravity="center_horizontal"
            android:textColor="@color/white"/>

        <RadioGroup
            android:id="@+id/jk_group"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:paddingStart="10sp"
            android:orientation="horizontal"
            tools:ignore="RtlSymmetry">

            <RadioButton
                android:id="@+id/rd_laki"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/laki_laki"
                android:textColor="@color/white"
                android:layout_marginEnd="50sp"
                android:layout_marginStart="40sp"/>

            <RadioButton
                android:id="@+id/rd_perempuan"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/perempuan"
                android:textColor="@color/white"/>
        </RadioGroup>

        <EditText
            android:id="@+id/edit_tanggal"
            android:layout_marginTop="10sp"
            android:layout_width="match_parent"
            android:layout_height="50sp"
            android:hint="@string/masukan_tanggal_lahir"
            android:clickable="true"
            android:onClick="showDatePickerDialog"
            android:paddingStart="20sp"
            android:background="@drawable/button_shape"
            tools:ignore="RtlSymmetry" />

        <EditText
            android:id="@+id/edit_alamat"
            android:layout_marginTop="10sp"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:inputType="textMultiLine"
            android:hint="@string/masukan_alamat"
            android:paddingStart="20sp"
            android:textColor="@color/dark"
            android:background="@drawable/button_shape"
            android:minHeight="80sp"
            android:maxHeight="200dp"
            android:scrollbars="vertical"
            tools:ignore="RtlSymmetry" />

        <Button
            android:id="@+id/btn_submit"
            android:layout_width="match_parent"
            android:layout_height="50sp"
            android:background="@drawable/button_shape"
            android:text="@string/submit"
            android:layout_marginTop="10sp"
            android:textSize="20sp"
            android:textStyle="bold"
            android:textColor="@color/white"/>

    </LinearLayout>
</RelativeLayout>