<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/dark"
    tools:context=".SplashScreenActivity">

    <ImageView
        android:layout_width="100sp"
        android:layout_height="100sp"
        android:src="@drawable/splash"
        android:layout_above="@+id/txt1"
        android:layout_centerHorizontal="true"
        android:layout_marginBottom="20sp"/>
    <TextView
        android:id="@+id/txt1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/aplikasi_profil_pengguna_sederhana"
        android:textSize="20sp"
        android:textStyle="bold"
        android:layout_centerInParent="true"
        android:textColor="@color/white"
        />

    <TextView
        android:id="@+id/txt2"
        android:layout_below="@+id/txt1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/gilang_nur_rizki"
        android:layout_marginTop="10sp"
        android:textSize="22sp"
        android:textStyle="bold"
        android:layout_centerInParent="true"
        android:textColor="@color/white"
        />

    <TextView
        android:id="@+id/txt3"
        android:layout_below="@+id/txt2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/npm"
        android:layout_marginTop="10sp"
        android:textSize="22sp"
        android:textStyle="bold"
        android:layout_centerInParent="true"
        android:textColor="@color/white"
        />
</RelativeLayout>